# instacook

./: .babelrc  .gitignore  .start.sh  README.md  package-lock.json  package.json  requirements.txt  shrinkwrap.yaml  watch.json  webpack.config.js
backend/: main.py  manage.py  pyproject.toml  scripts.py
backend/src/: __init__.py  core.py
backend/src/api/: __init__.py  account.py  comment.py  follows.py  hello.py  ingredients.py  likes.py  post.py  recipe_contains.py  recipes.py
frontend/: index.html  index.js  package.json
frontend/src/: App.js  index.js
frontend/src/components/: FeedCard.js  NavHeader.js  Navbar.js
frontend/src/css/: app.scss  colors.scss  createcomment.scss  createrecipe.scss  feed.scss  feedcard.scss  index.scss  likedposts.scss  login.scss  navbar.scss  newfeed.scss  postdetails.scss  profile.scss  search.scss  settings.scss
frontend/src/css/fonts/: fontspring-demo-blue_vinyl_regular_ps_ot-demo.html  stylesheet.css
frontend/src/pages/: CreateAccount.js  CreateComment.js  CreateIngredient.js  CreatePost.js  CreateRecipe.js  Feed.js  Follows.js  Home.js  LikedPosts.js  Login.js  NewFeed.js  PostDetails.js  Profile.js  Search.js  Settings.js
frontend/src/utils/: api.js  useAuth.js  usePersistedState.js  useQuery.js
frontend/static/css/: main.css
